# rust_error_handling

./: Cargo.toml  README.MD
src/: main.rs
